Add score counter

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
       <p><input type="submit" value="{{ option.title_ru }}" name="{{ option.id }}"></p>
     {% endfor %}
 </form>
+<h5>score: {{ score }}</h5>
 </body>
 
 </html>
