Добавить получение случайных фреймов от АПИ

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+  <img src="{{ frame_url }}">
   <form action="/" method="post">
     {% csrf_token %}
     {% for option in options %}
